eks/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-bank-api-deployment
  labels:
    app: simple-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-bank-api
  template:
    metadata:
      labels:
        app: simple-bank-api
    spec:
      containers:
      - name: simple-bank-api
        image: 760486049168.dkr.ecr.eu-west-1.amazonaws.com/simplebank:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http-server
        - containerPort: 9090
          name: grpc-server
